test/tests/compiler/17_supporting_dynamic_memory_allocation/invalid_types/void/void_compare.plx
pub fn main(none) i32 {
    #  you can't compare void expressions
    if cast<none>(1) < cast<none>(2) {
        return true
    }
    return 0
}
